gcc: 	* c-parse.in (parsing_iso_function_signature): New variable. 	(extdef_1): New, copied from... 	(extdef): ... here.  Reset parsing_iso_function_signature. 	(old_style_parm_decls):  Reset parsing_iso_function_signature. 	(old_style_parm_decls_1): New, copied from old_style_parm_decls. 	Warn about ISO C style function definitions. 	(nested_function, notype_nested_function): Reset 	parsing_iso_function_signature. 	(parmlist_2): Set parsing_iso_function_signature.
	* doc/invoke.texi (-Wtraditional): Document new behavior.

gcc/testsuite:
	* gcc.dg/cpp/tr-warn2.c: Use traditional C style function definitions.
	* gcc.dg/wtr-aggr-init-1.c: Likewise.
	* gcc.dg/wtr-conversion-1.c: Likewise.
	* gcc.dg/wtr-escape-1.c: Likewise.
	* gcc.dg/wtr-int-type-1.c: Likewise.
	* gcc.dg/wtr-label-1.c: Likewise.
	* gcc.dg/wtr-static-1.c: Likewise.
	* gcc.dg/wtr-strcat-1.c: Likewise.
	* gcc.dg/wtr-suffix-1.c: Likewise.
	* gcc.dg/wtr-switch-1.c: Likewise.
	* gcc.dg/wtr-unary-plus-1.c: Likewise.
	* gcc.dg/wtr-union-init-1.c: Likewise.
	* gcc.dg/wtr-union-init-2.c: Likewise.
	* gcc.dg/wtr-union-init-3.c: Likewise.

	* gcc.dg/wtr-func-def-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55201 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -331,6 +331,8 @@ ifc
 #define OBJC_NEED_RAW_IDENTIFIER(VAL)	/* nothing */
 end ifc
 
+static bool parsing_iso_function_signature;
+
 /* Tell yyparse how to print a token's value, if yydebug is set.  */
 
 #define YYPRINT(FILE,YYCHAR,YYLVAL) yyprint(FILE,YYCHAR,YYLVAL)
@@ -382,6 +384,10 @@ extdefs:
 	;
 
 extdef:
+	extdef_1
+	{ parsing_iso_function_signature = false; } /* Reset after any external definition.  */
+
+extdef_1:
 	fndef
 	| datadef
 ifobjc
@@ -787,7 +793,19 @@ objc_string:
 end ifobjc
 
 old_style_parm_decls:
+	old_style_parm_decls_1
+	{
+	  parsing_iso_function_signature = false; /* Reset after decls.  */
+	}
+
+old_style_parm_decls_1:
 	/* empty */
+	{
+	  if (warn_traditional && !in_system_header
+	      && parsing_iso_function_signature)
+	    warning ("traditional C rejects ISO C style function definitions");
+	  parsing_iso_function_signature = false; /* Reset after warning.  */
+	}
 	| datadecls
 	| datadecls ELLIPSIS
 		/* ... is used here to indicate a varargs function.  */
@@ -1586,6 +1604,7 @@ nested_function:
 		      pop_function_context ();
 		      YYERROR1;
 		    }
+		  parsing_iso_function_signature = false; /* Don't warn about nested functions.  */
 		}
 	   old_style_parm_decls
 		{ store_parm_decls (); }
@@ -1616,6 +1635,7 @@ notype_nested_function:
 		      pop_function_context ();
 		      YYERROR1;
 		    }
+		  parsing_iso_function_signature = false; /* Don't warn about nested functions.  */
 		}
 	  old_style_parm_decls
 		{ store_parm_decls (); }
@@ -2540,7 +2560,9 @@ parmlist_2:  /* empty */
 		  error ("ISO C requires a named argument before `...'");
 		}
 	| parms
-		{ $$ = get_parm_info (1); }
+		{ $$ = get_parm_info (1);
+		  parsing_iso_function_signature = true;
+		}
 	| parms ',' ELLIPSIS
 		{ $$ = get_parm_info (0); }
 	;
