--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -568,6 +568,7 @@ java/beans/Beans.java \
 java/beans/Customizer.java \
 java/beans/DesignMode.java \
 java/beans/EventSetDescriptor.java \
+java/beans/ExceptionListener.java \
 java/beans/FeatureDescriptor.java \
 java/beans/IndexedPropertyDescriptor.java \
 java/beans/IntrospectionException.java \
@@ -576,6 +577,7 @@ java/beans/MethodDescriptor.java \
 java/beans/ParameterDescriptor.java \
 java/beans/PropertyChangeEvent.java \
 java/beans/PropertyChangeListener.java \
+java/beans/PropertyChangeListenerProxy.java \
 java/beans/PropertyChangeSupport.java \
 java/beans/PropertyDescriptor.java \
 java/beans/PropertyEditor.java \
@@ -584,6 +586,7 @@ java/beans/PropertyEditorSupport.java \
 java/beans/PropertyVetoException.java \
 java/beans/SimpleBeanInfo.java \
 java/beans/VetoableChangeListener.java \
+java/beans/VetoableChangeListenerProxy.java \
 java/beans/VetoableChangeSupport.java \
 java/beans/Visibility.java
 
@@ -1776,7 +1779,7 @@ libgcj-test.spec.in libgcj.spec.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = tar
+TAR = gtar
 GZIP_ENV = --best
 DIST_SUBDIRS =  @DIRLTDL@ testsuite gcj include @DIRLTDL@ gcj include
 DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
@@ -2197,6 +2200,7 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/beans/BeanInfo.P .deps/java/beans/Beans.P \
 .deps/java/beans/Customizer.P .deps/java/beans/DesignMode.P \
 .deps/java/beans/EventSetDescriptor.P \
+.deps/java/beans/ExceptionListener.P \
 .deps/java/beans/FeatureDescriptor.P \
 .deps/java/beans/IndexedPropertyDescriptor.P \
 .deps/java/beans/IntrospectionException.P \
@@ -2204,6 +2208,7 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/beans/ParameterDescriptor.P \
 .deps/java/beans/PropertyChangeEvent.P \
 .deps/java/beans/PropertyChangeListener.P \
+.deps/java/beans/PropertyChangeListenerProxy.P \
 .deps/java/beans/PropertyChangeSupport.P \
 .deps/java/beans/PropertyDescriptor.P .deps/java/beans/PropertyEditor.P \
 .deps/java/beans/PropertyEditorManager.P \
@@ -2211,6 +2216,7 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/beans/PropertyVetoException.P \
 .deps/java/beans/SimpleBeanInfo.P \
 .deps/java/beans/VetoableChangeListener.P \
+.deps/java/beans/VetoableChangeListenerProxy.P \
 .deps/java/beans/VetoableChangeSupport.P .deps/java/beans/Visibility.P \
 .deps/java/beans/beancontext/BeanContext.P \
 .deps/java/beans/beancontext/BeanContextChild.P \
