* ra-rewrite.c: #include reload.h, insn-config.h 	* ra-build.c: #include reload.h 	* Makefile.in: Update ra-rewrite.o, ra-build.o dependencies to 	depend on reload.h, insn-config.h.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55483 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1568,14 +1568,14 @@ ra.o : ra.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H)  $(TM_P_H) insn-config.h \
    $(BASIC_BLOCK_H) df.h expr.h output.h toplev.h flags.h reload.h ra.h
 ra-build.o : ra-build.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_P_H) \
    insn-config.h $(RECOG_H) function.h $(REGS_H) hard-reg-set.h \
-   $(BASIC_BLOCK_H) df.h output.h ggc.h ra.h gt-ra-build.h
+   $(BASIC_BLOCK_H) df.h output.h ggc.h ra.h gt-ra-build.h reload.h
 ra-colorize.o : ra-colorize.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_P_H) \
     function.h $(REGS_H) hard-reg-set.h $(BASIC_BLOCK_H) df.h output.h ra.h
 ra-debug.o : ra-debug.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H)  insn-config.h \
    $(RECOG_H) function.h hard-reg-set.h $(BASIC_BLOCK_H) df.h output.h ra.h
 ra-rewrite.o : ra-rewrite.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TM_P_H) \
    function.h $(REGS_H) hard-reg-set.h $(BASIC_BLOCK_H) df.h expr.h \
-   output.h except.h ra.h
+   output.h except.h ra.h reload.h insn-config.h
 reload.o : reload.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) flags.h output.h \
    $(EXPR_H) $(OPTABS_H) reload.h $(RECOG_H) hard-reg-set.h insn-config.h \
    $(REGS_H) function.h real.h toplev.h $(TM_P_H)
