2002-07-19  Bo Thorsen  <bo@berlioz.suse.de>
        * java/lang/ieeefp.h: Add x86-64 support.
        * configure.in: Likewise.
        * configure.host: Likewise.
        * configure: Regenerated.
        * sysdep/x86-64/locks.h: New file with x86-64 locks.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55588 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -914,6 +914,9 @@ case "${host}" in
  s390*-*-linux*)
     SIGNAL_HANDLER=include/s390-signal.h
     ;;
+ x86_64*-*-linux*)
+    SIGNAL_HANDLER=include/dwarf2-signal.h
+    ;;
  sparc*-*-linux*)
     SIGNAL_HANDLER=include/dwarf2-signal.h
     ;;
